# Coconuts2D

./: .gitignore  .gitmodules  CMakeLists.txt  ENV  README.md  export.sh
docs/plantuml/: Application.plantuml  MainLoop.plantuml  Scene.plantuml  SceneManager.plantuml  SceneManager_scenesList.plantuml
include/coconuts2D/: Application.h  Executor.h  FileSystem.h  Logger.h  ResourceManager.h  Scene.h  SceneManager.h
include/coconuts2D/ecs/: Components.h  Entity.h  Scene.h
scripting/coconuts2D/: core_api.lua  entity_api.lua
src/: Application.cpp  CMakeLists.txt  Executor.cpp  FileSystem.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  main.cpp
src/ecs/: Bindings.h  Scene.cpp
src/ecs/scripts/: README.md  example.lua
src/editor/: CMakeLists.txt  EditorScene.cpp  EditorScene.h  NewProject.cpp  NewProject.h  ProjectManager.cpp  ProjectManager.h  main.cpp
src/editor/templates/: NewProject.cpp  NewProject.h
src/editor/templates/NewProject/: CMakeLists.txt  ENV
src/editor/templates/NewProject/res/: desc.txt  desc.yaml
src/editor/templates/NewProject/res/scripts/: example1.lua  template.lua
src/editor/templates/NewProject/src/: main.cpp
src/scripting/coconuts2D/: entity_api.lua
templates/NewProject/: CMakeLists.txt  ENV  build.sh  main.cpp  template.txt
templates/Project/: template.txt
